# engram

./: .dockerignore  .gitattributes  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  README.md  TESTING.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  sitemap.xml
backend/: engram.spec  pyproject.toml  run.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: routes.py  validation.py  websocket.py
backend/app/core/: ai_client.py  ai_identifier.py  analyst.py  curator.py  discdb_submitter.py  discord_notifier.py  extractor.py  logging.py  makemkv_registration.py  network.py  organizer.py  security.py  sentinel.py  tmdb_classifier.py  updater.py
backend/app/matcher/: addic7ed_client.py  chromaprint_extractor.py  chromaprint_matcher.py  chromaprint_scoring.py  coverage_tracker.py  episode_identification.py  llm_episode_matcher.py  provider_scheduler.py  srt_utils.py  subtitle_provider.py  subtitle_utils.py  testing_service.py  tmdb_client.py  tmdb_persistent_cache.py  tvsubtitles_client.py  utils.py  vectorizer_config.py
backend/app/models/: app_config.py  disc_job.py  fingerprint.py
backend/app/scripts/: bootstrap_library.py
backend/app/services/: config_service.py  contribution_correction.py  contribution_queue.py  contribution_uploader.py  event_broadcaster.py  finalization_coordinator.py  fingerprint_pack_cache.py  identification_coordinator.py  identity_prompts.py  job_manager.py  job_state_machine.py  matching_coordinator.py  simulation_service.py  zstd_varint_codec.py
backend/hooks/: rthook_headless.py
backend/migrations/: env.py
backend/migrations/versions/: 01f4f5567376_add_fingerprint_retractions_queue.py  5ea422081173_add_disc_jobs_identity_prompt_json.py  6148bcd5c13a_add_app_config_discord_webhook_url.py  7d7a3fc6a743_phase2_uploader_fields.py  a1b2c3d4e5f6_phase2_disclosure_fields.py  a863a06a3c34_phase3_enable_fingerprint_identification.py  b7f4c2e9a318_fingerprint_contribution_show_title.py  c4d8e1f0a2b3_add_disc_jobs_candidates_json.py  c5e9a1b3d7f2_add_disc_jobs_tmdb_year.py  d4e5f6a7b8c9_add_disc_titles_rerip_attempts.py  e7a2b9c4d1f8_add_disc_jobs_tmdb_degraded_reason.py
backend/scripts/: build_subtitle_cache.py  contributors.py  curated_shows.csv  curated_shows.txt  fetch_fpcalc.py  migrate_subtitle_cache_keys.py  normalize_subtitle_cache.py  pack_subtitle_cache.py  validate_subtitle_cache.py
backend/tests/: conftest.py  pytest.ini
backend/tests/integration/: conftest.py  test_amend_completed_title.py  test_amend_endpoint.py  test_bootstrap_api.py  test_chromaprint_cascade.py  test_contribution_uploader.py  test_disclosure_config.py  test_phase2_e2e.py  (+14 more)
(+352 files in other folders)
